We added the missing button destination

--- a/ingame/collectData.html
+++ b/ingame/collectData.html
@@ -37,7 +37,7 @@
             <option value="perro">Perro</option>
           </select>
         </div>
-          <button id="start" type="submit" onclick="return false">Inicia</button>
+          <button id="start" type="submit" onclick="">Inicia</button>
         <script src="../javascript/collectData.js"></script>
       </form>
     </div>
