Errors were solved and new things for comingSoon.html

--- a/ingame/comingSoon.html
+++ b/ingame/comingSoon.html
@@ -8,7 +8,10 @@
     <title>Document</title>
 </head>
 
-<body>
+<body id="gameOn">
+
+    <h1>En Proceso de Construcción</h1>
+    <p>Agradecemos tu paciencia</p>
 <!--El juego será desarrollado totalmente en javascript, por ende, no existen ningun otro tipo de etiquetas diferentes a scripts-->
 <!--Uso de la libreria three.js y GLTFLoader.js para el funcionamineto del main.js-->
     <script src="../javascript/three.js"></script>
