--- a/ingame/comingSoon.html
+++ b/ingame/comingSoon.html
@@ -8,16 +8,18 @@
     <title>Document</title>
 </head>
 
-<body id="gameOn">
-
-    <h1>En Proceso de Construcción</h1>
-    <p>Agradecemos tu paciencia</p>
+<body>
 <!--El juego será desarrollado totalmente en javascript, por ende, no existen ningun otro tipo de etiquetas diferentes a scripts-->
 <!--Uso de la libreria three.js y GLTFLoader.js para el funcionamineto del main.js-->
     <script src="../javascript/three.js"></script>
     <script src="../javascript/GLTFLoader.js"></script>
     <script src="../javascript/GLTFLoader2.js"></script>
     <script src="../javascript/main.js"></script>
+
+    <div class="gameOn">
+        <h1>En Proceso de Construcción</h1>
+        <p>Agradecemos tu paciencia</p>
+    </div>
 </body>
 
 </html>
