We added some new objects, orbit controls, 2 new loaders of 3D models (GLTFLoader and OBJLoaders

--- a/collectData.html
+++ b/collectData.html
@@ -11,7 +11,7 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../sytle.css" />
+    <link rel="stylesheet" href="./src/css/sytle.css" />
     <title>Collect Data</title>
 </head>
 <body class="ingame">
@@ -22,7 +22,7 @@
         <p>Es solo información del juego (no es necesario información personal)</p>
       </div>
       <!-- Formulario de recolección de información del jugador -->
-      <form>
+      <form action="./comingSoon.html"> 
         <div class="title">
           <i class="fas fa-pencil-alt"></i> 
           <h2>Digita tu Información Aquí</h2>
@@ -37,8 +37,8 @@
             <option value="perro">Perro</option>
           </select>
         </div>
-          <button id="start" type="submit" onclick="">Inicia</button>
-        <script src="../javascript/collectData.js"></script>
+          <button id="start" type="submit">Inicia</button>
+        <script src="./src/js/ingame/collectData.js"></script>
       </form>
     </div>
 
