Modals were added and orbit controls has been updated

--- a/comingSoon.html
+++ b/comingSoon.html
@@ -5,9 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-
-  <body onload="initScene()">
     <!--El juego será desarrollado totalmente en javascript, por ende, no existen ningun otro tipo de etiquetas diferentes a scripts-->
     <!--Uso de la libreria three.js y GLTFLoader.js para el funcionamineto del main.js-->
     <script src="./src/js/libs/three.js"></script>
@@ -19,9 +16,11 @@
     <script src="./src/js/libs/DRACOLoader.js"></script>
     <script src="./src/js/libs/GLTFLoader.js"></script>
 
-
     <script src="./src/js/ingame/main.js"></script>
+  </head>
 
-    <div class="gameOn"></div>
+  <body onload="initScene()">
+  <canvas width="100%" height="100%" class="webgl"></canvas>
   </body>
+
 </html>
