--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#instructionModal" href="#">Instrucciones</a>
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#workingOn" href="#">Instrucciones</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Sobre Nosotros</a>
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#workingOn" href="#">Sobre Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Reporta Bugs</a>
+                    <a class="nav-link" data-bs-toggle="modal" data-bs-target="#workingOn" href="#">Reporta Bugs</a>
                   </li>
                 </ul>
               </div>
@@ -61,6 +61,28 @@
           </nav>
         </div>
       </div>
+
+
+      <!-- Modal -->
+      <div class="modal fade" id="workingOn" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">Página en construcción</h5>
+              <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              Agradecemos tu paciencia
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <!-- Fin de la barra de navegación -->
 
       <!-- Comienzo de la presentación del juego -->
