New movement and control libraries have been added,and GUI for tracing the movement of objects.

--- a/collectData.html
+++ b/collectData.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +19,7 @@
       <div class="left-part">
         <i class="fas fa-graduation-cap"></i>
         <h1>Ingresa la información</h1>
-        <p>Es solo información del juego (no es necesario información personal)</p>
+        <p>Es solo información del juego (no es necesario información personal).</p>
       </div>
       <!-- Formulario de recolección de información del jugador -->
       <form action="./comingSoon.html"> 
