--- a/comingSoon.html
+++ b/comingSoon.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!--El juego será desarrollado totalmente en javascript, por ende, no existen ningun otro tipo de etiquetas diferentes a scripts-->
-    <!--Uso de la libreria three.js y GLTFLoader.js para el funcionamineto del main.js-->
+    <!--El juego será desarrollado totalmente en javascript, por ende, no existe ningún otro tipo de etiquetas diferentes a scripts-->
+    <!--Uso de la librería three.js y GLTFLoader.js para el funcionamineto del main.js-->
     <script src="./src/js/libs/three.js"></script>
     <script src="./src/js/libs/three.min.js"></script>
+    <script src="./src/js/libs/DAT.GUI.min.js"></script>
     <script src="./src/js/libs/OrbitControls.js"></script>
-    <!--loader-->
+    <!--loaders para modelos 3D-->
     <script src="./src/js/libs/OBJLoader.js"></script>
     <script src="./src/js/libs/MTLLoader.js"></script>
     <script src="./src/js/libs/DRACOLoader.js"></script>
